# heb-clock-flasher

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  metrics.py
backend/app/api/v1/: firmware.py  products.py  router.py  schemas.py  seo.py  system.py
backend/app/catalog/: loader.py  models.py  offsets.py  store.py
backend/app/core/: config.py  logging.py
backend/tests/: conftest.py  test_api.py  test_catalog_loader.py  test_import.py
firmware/hebrew-clock/: product.yaml
firmware/hebrew-clock-ntp/: product.yaml
firmware/hebrew-clock-ntp/2026.6.0/: manifest.yaml
firmware/hebrew-time-rtc/: product.yaml
firmware/hebrew-time-rtc/2026.6.0/: manifest.yaml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BrowserSupportGate.tsx  Layout.tsx  Navbar.tsx  SerialConsole.tsx
frontend/src/lib/: analytics.ts  flasher.ts  seo.ts  serial-console.ts  webserial.ts
frontend/src/pages/: FlashPage.tsx  HomePage.tsx  ProductPage.tsx
scripts/: import_firmware.py  next-version.sh
