[project]
name = "esp-web-flasher"
version = "0.1.0"
description = "Self-hosted ESP firmware flasher — serves firmware catalogue and SPA"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "loguru==0.7.2",
    "pyyaml==6.0.2",
    "prometheus-client==0.21.0",
    "aiofiles==24.1.0",
    "python-multipart==0.0.10",
]

[project.scripts]
esp-web-flasher = "app.main:main"

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-PyYAML==6.0.12.20240917",
    "types-aiofiles==24.1.0.20240626",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
